Database Login and Signup Added

--- a/EatSmart/app/src/main/AndroidManifest.xml
+++ b/EatSmart/app/src/main/AndroidManifest.xml
@@ -9,8 +9,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".loginPage"
-            android:label= "@string/app_name">
-
+            android:label="@string/app_name" >
         </activity>
         <activity
             android:name=".home_customer"
@@ -18,12 +17,17 @@
         </activity>
         <activity
             android:name=".splash_screen"
-            android:label="@string/app_name">
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".SignUPActivity"
+            android:label="@string/title_activity_sign_up"
+            android:theme="@style/AppTheme.NoActionBar" >
         </activity>
     </application>
 
