--- a/EatSmart/app/src/main/AndroidManifest.xml
+++ b/EatSmart/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".loginPage"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
             android:name=".home_customer"
@@ -17,7 +18,8 @@
         </activity>
         <activity
             android:name=".splash_screen"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -34,7 +36,8 @@
             android:label="@string/title_activity_choose_sign_up"
             android:theme="@style/AppTheme.NoActionBar" >
         </activity>
-        <activity android:name=".restaurantSignUp" >
+        <activity android:name=".restaurantSignUp"
+            android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity android:name=".home_restaurant" >
         </activity>
