--- a/EatSmart/app/src/main/AndroidManifest.xml
+++ b/EatSmart/app/src/main/AndroidManifest.xml
@@ -10,19 +10,19 @@
         <activity
             android:name=".loginPage"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" >
         </activity>
         <activity
             android:name=".home_customer"
             android:label="@string/app_name"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".splash_screen"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -32,21 +32,30 @@
         <activity
             android:name=".SignUPActivity"
             android:label="@string/title_activity_sign_up"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" >
         </activity>
         <activity
             android:name=".chooseSignUP"
             android:label="@string/title_activity_choose_sign_up"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" >
         </activity>
-        <activity android:name=".restaurantSignUp"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:screenOrientation="portrait">
+        <activity
+            android:name=".restaurantSignUp"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" >
         </activity>
-        <activity android:name=".home_restaurant"
-            android:screenOrientation="portrait">
+        <activity
+            android:name=".home_restaurant"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name=".details_restaurant"
+            android:label="@string/title_activity_details_restaurant"
+            android:theme="@style/AppTheme.NoActionBar" >
+        </activity>
+        <activity android:name=".restau_choose" >
         </activity>
     </application>
 
