Finish Restaurant Owner perspective but have not properly verified it expect alot of bugs/crashes when using

--- a/EatSmart/app/src/main/AndroidManifest.xml
+++ b/EatSmart/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.jerem.eatsmart" >
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/red_logo"
@@ -52,7 +55,6 @@
         </activity>
         <activity
             android:name=".details_restaurant"
-            android:label="@string/title_activity_details_restaurant"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" >
         </activity>
@@ -75,6 +77,8 @@
         <activity
             android:name=".search_result"
             android:label="@string/title_activity_search_result" >
+        </activity>
+        <activity android:name=".resto_edit" >
         </activity>
     </application>
 
