created rate and comment page. forwarded ifl page and search page to search_result page. forwarded search_result page to rate and comment page

--- a/EatSmart/app/src/main/AndroidManifest.xml
+++ b/EatSmart/app/src/main/AndroidManifest.xml
@@ -80,6 +80,10 @@
         </activity>
         <activity android:name=".resto_edit" >
         </activity>
+        <activity
+            android:name=".rate_and_comment"
+            android:label="@string/title_activity_rate_and_comment" >
+        </activity>
     </application>
 
 </manifest>
