--- a/EatSmart/app/src/main/AndroidManifest.xml
+++ b/EatSmart/app/src/main/AndroidManifest.xml
@@ -86,6 +86,8 @@
         </activity>
         <activity android:name=".true_home_restau" >
         </activity>
+        <activity android:name=".details_restaurant_2" >
+        </activity>
     </application>
 
 </manifest>
