--- a/EatSmart/app/src/main/AndroidManifest.xml
+++ b/EatSmart/app/src/main/AndroidManifest.xml
@@ -57,7 +57,7 @@
             android:name=".details_restaurant"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="adjustResize">
+            android:windowSoftInputMode="stateHidden">
         </activity>
         <activity
             android:name=".restau_choose"
@@ -95,7 +95,6 @@
             android:screenOrientation="portrait" >
         </activity>
         <activity android:name=".details_restaurant_2"
-            android:windowSoftInputMode="adjustResize"
             android:screenOrientation="portrait">
         </activity>
     </application>
